force-app/main/default/objects/Visit_Report_Opportunity__c/Visit_Report_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Link Visit Report Opportunity</label>
    <nameField>
        <displayFormat>VC-{0000}</displayFormat>
        <label>Visit Report Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Link Visit Report Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>