force-app/main/default/objects/Visit_Report_Opportunity__c/fields/Categories__c.field-meta.xml
<CustomField>
    <fullName>Categories__c</fullName>
    <formula>TEXT(Customer__r.Categories__c)</formula>
    <label>Categories</label>
    <type>Text</type>
</CustomField>