force-app/main/default/objects/Visit_Report_Opportunity__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Visit Plan/ Report</label>
    <referenceTo>Call_Report__c</referenceTo>
    <relationshipName>Visit_Report_Opportunities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>