force-app/main/default/objects/Visit_Report_Opportunity__c/fields/Expected_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Complete_Date__c</fullName>
    <formula>Opportunity__r.CloseDate</formula>
    <label>Expected Complete Date</label>
    <type>Date</type>
</CustomField>