force-app/main/default/objects/Visit_Report_Opportunity__c/fields/Main_purpose__c.field-meta.xml
<CustomField>
    <fullName>Main_purpose__c</fullName>
    <formula>TEXT(Customer__r.Main_purpose__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main purpose</label>
    <type>Text</type>
</CustomField>