force-app/main/default/objects/Visit_Report_Opportunity__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Visit_Report_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>