force-app/main/default/objects/Visit_Report_Opportunity__c/fields/Opportunity_Detail__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Detail__c</fullName>
    <formula>Opportunity__r.Name</formula>
    <label>Opportunity Detail</label>
    <type>Text</type>
</CustomField>