force-app/main/default/objects/Visit_Report_Opportunity__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>TEXT(Customer__r.Status__c)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>